syntax = "proto3";

option csharp_namespace = "AElf.OS.Network";

import "kernel.proto";
import "common.proto";

message Handshake {
    HandshakeData HskData = 1;
    bytes Sig = 2;
    bool Success = 3;
    BlockHeader Header = 4;
}

message HandshakeData {
    int64 ListeningPort = 1;
    bytes PublicKey = 2;
    int32 Version = 3;
}

message PeerNewBlockAnnouncement {
    Hash BlockHash = 1;
    int64 BlockHeight = 2;
}